Fixed positioning of aligned images when wrapper is removed

--- a/src/image.css
+++ b/src/image.css
@@ -103,8 +103,17 @@ button.cnr-reset {
 }
 
 
-.aloha-image-placeholder {
-	-moz-box-shadow:	0px 2px 8px rgba(0, 0, 0, 0.4);
-	-webkit-box-shadow:	0px 2px 8px rgba(0, 0, 0, 0.4);
-	box-shadow:			0px 2px 8px rgba(0, 0, 0, 0.4);
+.aloha-image-box-active {
+	-moz-box-shadow:	0px 2px 8px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow:	0px 2px 8px rgba(0, 0, 0, 0.2);
+	box-shadow:			0px 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+.aloha-image-box-active .ui-resizable-handle.ui-resizable-nw {
+}
+.aloha-image-box-active .ui-resizable-handle.ui-resizable-ne {
+}
+.aloha-image-box-active .ui-resizable-handle.ui-resizable-se {
+}
+.aloha-image-box-active .ui-resizable-handle.ui-resizable-sw {
 }
